# scrapy_X_celery_amazonScraper

./: .env.sample  Dockerfile  celery_app.py  docker-compose.yaml  pyproject.toml  readme.md  results.json  run_spider.py
amazon_scraper/: scrapy.cfg
amazon_scraper/amazon_scraper/: items.py  pipelines.py  results.json  settings.py
amazon_scraper/amazon_scraper/spiders/: amazonspider.py  configs.py
app/: main.py  types.py
tasks/: __init__.py
